--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,11 +44,11 @@
         </LinearLayout>
 
 <!--        <com.example.three_oh_uno.HandView-->
-        <SurfaceView
+        <com.example.three_oh_uno.TableView
             android:id="@+id/tableView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="4" />
+            android:layout_weight="1" />
 
         <com.example.three_oh_uno.HandView
             android:id="@+id/handView"
