TableView updated for cards to be bigger and color to be more appealing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,13 +47,13 @@
         <com.example.three_oh_uno.TableView
             android:id="@+id/tableView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_height="0dp"
+            android:layout_weight="5" />
 
         <com.example.three_oh_uno.HandView
             android:id="@+id/handView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1" />
 
     </LinearLayout>
