--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,14 +25,14 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/lobbyInfoText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:text="4 Player CPU Lobby" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/exitButton"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -46,7 +46,6 @@
 
         </LinearLayout>
 
-<!--        <com.example.three_oh_uno.HandView-->
         <com.example.three_oh_uno.TableView
             android:id="@+id/tableView"
             android:layout_width="match_parent"
@@ -58,6 +57,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2" />
+
+        <SeekBar
+            android:id="@+id/scrollHandSeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
